--- a/config.yaml
+++ b/config.yaml
@@ -8,7 +8,9 @@ config:
   - false
   - false
   start_record: !Contains
-  - key: Return
+  - key_option: 0
+    key: Return
+    controller_btn_option: 0
     controller_btn: null
     ctrl: false
     alt: false
@@ -21,7 +23,9 @@ config:
     trigger_l: null
     trigger_r: null
   stop_record: !Contains
-  - key: Escape
+  - key_option: 0
+    key: Escape
+    controller_btn_option: 0
     controller_btn: null
     ctrl: false
     alt: false
@@ -34,7 +38,9 @@ config:
     trigger_l: null
     trigger_r: null
   start_playback: !Contains
-  - key: Return
+  - key_option: 0
+    key: Return
+    controller_btn_option: 0
     controller_btn: null
     ctrl: true
     alt: false
@@ -47,7 +53,9 @@ config:
     trigger_l: null
     trigger_r: null
   stop_playback: !Contains
-  - key: Escape
+  - key_option: 0
+    key: Escape
+    controller_btn_option: 0
     controller_btn: null
     ctrl: false
     alt: false
@@ -60,19 +68,23 @@ config:
     trigger_l: null
     trigger_r: null
   continue_record: !Exclude
-  - key: null
+  - key_option: 2
+    key: null
+    controller_btn_option: 2
     controller_btn: null
     ctrl: null
     alt: null
     shift: null
     tab: null
     windows: null
-    mouse_l_button: null
-    mouse_r_button: null
-    mouse_m_button: null
+    mouse_l_button: false
+    mouse_r_button: false
+    mouse_m_button: false
     trigger_l: null
     trigger_r: null
-  - key: Escape
+  - key_option: 0
+    key: Escape
+    controller_btn_option: 0
     controller_btn: null
     ctrl: false
     alt: false
@@ -85,7 +97,9 @@ config:
     trigger_l: null
     trigger_r: null
   drop_record: !Contains
-  - key: Escape
+  - key_option: 0
+    key: Escape
+    controller_btn_option: 0
     controller_btn: null
     ctrl: false
     alt: false
@@ -98,7 +112,9 @@ config:
     trigger_l: null
     trigger_r: null
   save_records: !Contains
-  - key: KeyS
+  - key_option: 0
+    key: KeyS
+    controller_btn_option: 0
     controller_btn: null
     ctrl: true
     alt: false
@@ -147,4 +163,483 @@ init_state:
       - 0.0
     - - 0.0
       - 0.0
-records: []
+records:
+- ms: 5950.2989
+  pressed: []
+  released: []
+  moves: []
+- ms: 5997.891100000001
+  pressed:
+  - !Keyboard Alt
+  released: []
+  moves: []
+- ms: 6093.6523
+  pressed:
+  - !Keyboard Tab
+  released: []
+  moves: []
+- ms: 6461.7108
+  pressed: []
+  released:
+  - !Keyboard Tab
+  moves: []
+- ms: 6469.709199999999
+  pressed: []
+  released: []
+  moves:
+  - !Mouse
+    - 662.0
+    - 314.0
+- ms: 6477.8192
+  pressed: []
+  released: []
+  moves:
+  - !Mouse
+    - 674.0
+    - 321.0
+- ms: 6485.714
+  pressed:
+  - !Keyboard Tab
+  released: []
+  moves:
+  - !Mouse
+    - 692.0
+    - 334.0
+- ms: 6493.6915
+  pressed: []
+  released: []
+  moves:
+  - !Mouse
+    - 714.0
+    - 346.0
+- ms: 6501.6959
+  pressed: []
+  released: []
+  moves:
+  - !Mouse
+    - 742.0
+    - 364.0
+- ms: 6509.6905
+  pressed: []
+  released: []
+  moves:
+  - !Mouse
+    - 767.0
+    - 381.0
+- ms: 6517.6949
+  pressed: []
+  released: []
+  moves:
+  - !Mouse
+    - 792.0
+    - 399.0
+- ms: 6525.6948999999995
+  pressed: []
+  released: []
+  moves:
+  - !Mouse
+    - 817.0
+    - 419.0
+- ms: 6533.6938
+  pressed: []
+  released: []
+  moves:
+  - !Mouse
+    - 849.0
+    - 441.0
+- ms: 6541.6893
+  pressed: []
+  released: []
+  moves:
+  - !Mouse
+    - 879.0
+    - 461.0
+- ms: 6549.7027
+  pressed: []
+  released: []
+  moves:
+  - !Mouse
+    - 909.0
+    - 484.0
+- ms: 6557.6914
+  pressed: []
+  released: []
+  moves:
+  - !Mouse
+    - 934.0
+    - 501.0
+- ms: 6565.6381
+  pressed: []
+  released: []
+  moves:
+  - !Mouse
+    - 959.0
+    - 521.0
+- ms: 6573.689899999999
+  pressed: []
+  released:
+  - !Keyboard Tab
+  moves:
+  - !Mouse
+    - 982.0
+    - 539.0
+- ms: 6581.6983
+  pressed: []
+  released: []
+  moves:
+  - !Mouse
+    - 999.0
+    - 554.0
+- ms: 6589.6928
+  pressed: []
+  released: []
+  moves:
+  - !Mouse
+    - 1017.0
+    - 564.0
+- ms: 6597.9773000000005
+  pressed: []
+  released: []
+  moves:
+  - !Mouse
+    - 1032.0
+    - 579.0
+- ms: 6605.6545
+  pressed: []
+  released: []
+  moves:
+  - !Mouse
+    - 1047.0
+    - 584.0
+- ms: 6613.6885
+  pressed: []
+  released:
+  - !Keyboard Alt
+  moves:
+  - !Mouse
+    - 1057.0
+    - 594.0
+- ms: 6621.7173999999995
+  pressed: []
+  released: []
+  moves:
+  - !Mouse
+    - 1072.0
+    - 599.0
+- ms: 6629.703100000001
+  pressed: []
+  released: []
+  moves:
+  - !Mouse
+    - 1082.0
+    - 604.0
+- ms: 6637.705000000001
+  pressed: []
+  released: []
+  moves:
+  - !Mouse
+    - 1097.0
+    - 609.0
+- ms: 6645.7041
+  pressed: []
+  released: []
+  moves:
+  - !Mouse
+    - 1114.0
+    - 611.0
+- ms: 6653.706
+  pressed: []
+  released: []
+  moves:
+  - !Mouse
+    - 1129.0
+    - 619.0
+- ms: 6661.6868
+  pressed: []
+  released: []
+  moves:
+  - !Mouse
+    - 1139.0
+    - 621.0
+- ms: 6669.7515
+  pressed: []
+  released: []
+  moves:
+  - !Mouse
+    - 1152.0
+    - 629.0
+- ms: 6677.6988
+  pressed: []
+  released: []
+  moves:
+  - !Mouse
+    - 1167.0
+    - 634.0
+- ms: 6685.7087
+  pressed: []
+  released: []
+  moves:
+  - !Mouse
+    - 1177.0
+    - 639.0
+- ms: 6693.6853
+  pressed: []
+  released: []
+  moves:
+  - !Mouse
+    - 1187.0
+    - 644.0
+- ms: 6701.7075
+  pressed: []
+  released: []
+  moves:
+  - !Mouse
+    - 1192.0
+    - 649.0
+- ms: 6709.686599999999
+  pressed: []
+  released: []
+  moves:
+  - !Mouse
+    - 1199.0
+    - 651.0
+- ms: 6717.7089
+  pressed: []
+  released: []
+  moves:
+  - !Mouse
+    - 1207.0
+    - 654.0
+- ms: 6725.6889
+  pressed: []
+  released: []
+  moves:
+  - !Mouse
+    - 1217.0
+    - 654.0
+- ms: 6733.6944
+  pressed: []
+  released: []
+  moves:
+  - !Mouse
+    - 1227.0
+    - 659.0
+- ms: 6741.6865
+  pressed: []
+  released: []
+  moves:
+  - !Mouse
+    - 1244.0
+    - 664.0
+- ms: 6749.6941
+  pressed: []
+  released: []
+  moves:
+  - !Mouse
+    - 1267.0
+    - 669.0
+- ms: 6757.686900000001
+  pressed: []
+  released: []
+  moves:
+  - !Mouse
+    - 1292.0
+    - 679.0
+- ms: 6765.6931
+  pressed: []
+  released: []
+  moves:
+  - !Mouse
+    - 1322.0
+    - 684.0
+- ms: 6773.687599999999
+  pressed: []
+  released: []
+  moves:
+  - !Mouse
+    - 1349.0
+    - 694.0
+- ms: 6781.6948999999995
+  pressed: []
+  released: []
+  moves:
+  - !Mouse
+    - 1372.0
+    - 699.0
+- ms: 6789.6905
+  pressed: []
+  released: []
+  moves:
+  - !Mouse
+    - 1397.0
+    - 709.0
+- ms: 6797.6873
+  pressed: []
+  released: []
+  moves:
+  - !Mouse
+    - 1412.0
+    - 714.0
+- ms: 6805.6967
+  pressed: []
+  released: []
+  moves:
+  - !Mouse
+    - 1427.0
+    - 719.0
+- ms: 6813.6842
+  pressed: []
+  released: []
+  moves:
+  - !Mouse
+    - 1432.0
+    - 724.0
+- ms: 6821.6985
+  pressed: []
+  released: []
+  moves:
+  - !Mouse
+    - 1437.0
+    - 724.0
+- ms: 6997.8893
+  pressed: []
+  released: []
+  moves:
+  - !Mouse
+    - 1439.0
+    - 726.0
+- ms: 7093.818899999999
+  pressed:
+  - !MouseButton 0
+  released: []
+  moves: []
+- ms: 7813.908299999999
+  pressed: []
+  released:
+  - !MouseButton 0
+  moves: []
+- ms: 7893.660699999999
+  pressed:
+  - !Keyboard Return
+  released: []
+  moves: []
+- ms: 8934.274
+  pressed: []
+  released:
+  - !Keyboard Return
+  moves: []
+- ms: 9149.917
+  pressed:
+  - !Keyboard ControlLeft
+  released: []
+  moves: []
+- ms: 9197.6735
+  pressed:
+  - !Keyboard Return
+  released: []
+  moves: []
+- ms: 9493.6894
+  pressed: []
+  released:
+  - !Keyboard Return
+  moves: []
+- ms: 11534.3514
+  pressed: []
+  released:
+  - !Keyboard ControlLeft
+  moves: []
+- ms: 11701.652
+  pressed:
+  - !Keyboard ControlLeft
+  released: []
+  moves: []
+- ms: 12597.897500000001
+  pressed: []
+  released:
+  - !Keyboard ControlLeft
+  moves: []
+- ms: 12669.6116
+  pressed:
+  - !Keyboard Return
+  released: []
+  moves: []
+- ms: 16110.3532
+  pressed: []
+  released:
+  - !Keyboard Return
+  moves: []
+- ms: 16189.6178
+  pressed:
+  - !Keyboard Escape
+  released: []
+  moves: []
+- ms: 19710.2834
+  pressed: []
+  released:
+  - !Keyboard Escape
+  moves: []
+- ms: 19821.8658
+  pressed:
+  - !Keyboard ShiftLeft
+  released: []
+  moves: []
+- ms: 19877.6416
+  pressed:
+  - !Keyboard Return
+  released: []
+  moves: []
+- ms: 20005.642300000003
+  pressed: []
+  released:
+  - !Keyboard Return
+  moves: []
+- ms: 22158.175499999998
+  pressed: []
+  released:
+  - !Keyboard ShiftLeft
+  moves: []
+- ms: 22230.1261
+  pressed:
+  - !Keyboard ShiftLeft
+  released: []
+  moves: []
+- ms: 22309.6063
+  pressed:
+  - !Keyboard Escape
+  released: []
+  moves: []
+- ms: 22357.6058
+  pressed: []
+  released:
+  - !Keyboard Escape
+  moves: []
+- ms: 24805.796000000002
+  pressed: []
+  released:
+  - !Keyboard ShiftLeft
+  moves: []
+- ms: 24885.617700000003
+  pressed:
+  - !Keyboard Return
+  released: []
+  moves: []
+- ms: 26654.2442
+  pressed: []
+  released:
+  - !Keyboard Return
+  moves: []
+- ms: 26726.053799999998
+  pressed:
+  - !Keyboard ControlLeft
+  released: []
+  moves: []
+- ms: 26829.6801
+  pressed:
+  - !Keyboard ShiftLeft
+  released: []
+  moves: []
+- ms: 26934.315300000002
+  pressed:
+  - !MouseButton 1
+  released: []
+  moves: []
